# libitl2

./: AUTHORS  CMakeLists.txt  README.md  demo_hijri.c  demo_prayer.c  hijri.c  prayer.c  prayer.h
examples/: demo_hijri.c  demo_prayer.c
hijri/: hijri.c  hijri.h  umm_alqura.c
pkgconfig/: itl.pc
prayertime/: astro.c  astro.h  prayer.c  prayer.h
